# Interpretable-machine-learning-by-python

./: .gitignore  README.md  pyproject.toml  ramble.ipynb
python/notebook/: 5.1 Linear Regression.ipynb  5.2 Logistic Regression.ipynb  5.3 GLM, GAM and more.ipynb  5.3 Linear Model Extensions.ipynb  5.4 Decision Tree.ipynb  5.5 Interpretabe Rule.ipynb  5.6 RuleFit.ipynb  6.1 PDP.ipynb  6.10_shap.ipynb  6.2 ICE.ipynb  6.5 PFI.ipynb  6.6 Global Surrogate.ipynb  6.7_LIME.ipynb  8.1 PDP.ipynb  8.2 ALE.ipynb  8.5 PFI.ipynb  8.6 Global Surrogate.ipynb  9.1 ICE.ipynb  9.2 LIME.ipynb  9.5 shapley.ipynb  9.6 shap.ipynb  deleted_6.4 Feature Interaction.ipynb
python/src/: preprocess.py  utils.py
